Added basic audio button for front end

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<div class="loaders">
+  <div class="loader google-loader">
+    <div class="google-loader-bar"></div>
+    <div class="google-loader-bar"></div>
+    <div class="google-loader-bar"></div>
+    <div class="google-loader-bar"></div>
+  </div>
+</div>
