Button animation works correctly now

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </head>
-<div class="loaders">
+
+<div class="instructions"> Press the button below to start/stop recording. </div> 
+<div class="loaders" onclick="myFunction()">
   <div class="loader google-loader">
     <div class="google-loader-bar"></div>
     <div class="google-loader-bar"></div>
