--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="index.js"></script>
+  <script src="/Recorderjs/dist/recorder.js"></script>
 </head>
 
 <div class="instructions"> Press the button below to start/stop recording. </div> 
