--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <div class="instructions"> Press the button below to start/stop recording. </div> 
-<div class="loaders" onclick="myFunction()">
+<div class="loaders">
   <div class="loader google-loader">
     <div class="google-loader-bar"></div>
     <div class="google-loader-bar"></div>
