--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <div class="instructions"> Press the button below to start/stop recording. </div>
+<h1 class="result"></h1>
 <div class="loaders">
   <div class="loader google-loader">
     <div class="google-loader-bar"></div>
