--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,13 +5,16 @@
   <script src="/Recorderjs/dist/recorder.js"></script>
 </head>
 
-<div class="instructions"> Press the button below to start/stop recording. </div>
-<h1 class="result"></h1>
-<div class="loaders">
-  <div class="loader google-loader">
+<div class="instructions fade"> Press the button below to start/stop recording. </div>
+<div class="loaders fade">
+  <div class="loader google-loader fade">
     <div class="google-loader-bar"></div>
     <div class="google-loader-bar"></div>
     <div class="google-loader-bar"></div>
     <div class="google-loader-bar"></div>
   </div>
+</div>
+
+<div class="result">
+
 </div>
